k8s/manifests/deployment.yaml
# This is a sample deployment manifest file for a simple web application
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-web-app
  labels:
    app: go-web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-web-app
  template:
    metadata:
      labels:
        app: go-web-app
    spec:
      containers:
      - name: go-web-app
        image: manikantarouthu/go-web-app:latest
        ports:
        - containerPort: 8080
