k8s/manifests/ingress.yaml
# Ingress resource for the applicaton
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: go-web-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: daws.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          Service:
            name: go-web-app
            port:
              number: 80
